--- a/configs/formatters/tex-fmt.toml
+++ b/configs/formatters/tex-fmt.toml
@@ -1,5 +1,5 @@
-wrap = false       # wether to wrap long lines or not
-wraplen = 120      # max column limit
+wrap = true        # wether to wrap long lines or not
+wraplen = 80       # line length limit
 tabsize = 1        # number of characters to use for indentation
 tabchar = "tab"    # use tabs instead of spaces
 verbosity = "warn" # show warnings
