fix(nvim): open preview pdf when using oly

--- a/configs/oly/config.yaml
+++ b/configs/oly/config.yaml
@@ -12,6 +12,8 @@ author: Antoine Saez Dumas
 # The base path where solutions are stored
 base_path: ~/Mathématiques/Solutions
 
+language: typst
+
 # The pdf viewer used for 'oly gen'
 pdf_viewer: zathura
 
