feat(install.sh): install oly automatically; feat(fzf): nice colors; style(nvim): use lua_ls' formatter

--- a/configs/fzf.conf
+++ b/configs/fzf.conf
@@ -1,11 +1,7 @@
-# colors
---color=bg+:#363646,bg:#1f1f28,border:#54546d,spinner:#7E9CD8,hl:#727169,fg:#dcd7ba,header:#727169
---color=info:#957fb8,pointer:#c34043,marker:#76946a,fg+:#dcd7ba,prompt:#dca561,hl+:#957fb8,selected-bg:#363646
-
 # characters
 --prompt="❯ "
---pointer=""
---marker="│"
+--pointer=""
+--marker="󱓻 "
 
 # user interface
 --style=full
@@ -17,3 +13,10 @@
 # miscellaneous options
 --cycle
 --multi
+
+# colors (needs to come last)
+--color=fg:#dcd7ba,selected-fg:#7aa89f
+--color=bg:#1f1f28,current-bg:#363646,gutter:#1f1f28
+--color=border:#54546d,header:#727169
+--color=hl:#e82424,marker:#e6c384
+--color=info:#957fb8,spinner:#7E9CD8,prompt:#dca561
