--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -1,26 +1,36 @@
 # fonts
-font_family                     family="JetBrainsMono Nerd Font"
-bold_font                       auto
-italic_font                     auto
-bold_italic_font                auto
+font_family      family="JetBrainsMono Nerd Font"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
-font_size                       15
-modify_font                     strikethrough_position 110%
-modify_font                     strikethrough_thickness 160%
-modify_font                     underline_position 120%
-modify_font                     underline_thickness 1px
-undercurl_style                 thin-dense
+font_size       15
+modify_font     strikethrough_position 110%
+modify_font     strikethrough_thickness 160%
+modify_font     underline_position 120%
+modify_font     underline_thickness 1px
+undercurl_style thin-dense
 
-symbol_map                      U+276F,U+276E FiraCode Nerd Font
+symbol_map U+276F,U+276E   FiraCode Nerd Font
+# math glyphs
+symbol_map U+2100-U+214F   JuliaMono
+symbol_map U+2190-U+21FF   JuliaMono
+symbol_map U+2200-U+22FF   JuliaMono
+symbol_map U+2300-U+23FF   JuliaMono
+symbol_map U+25A0-U+25FF   JuliaMono
+symbol_map U+2A00-U+2AFF   JuliaMono
+symbol_map U+02B0-U+02FF   JuliaMono
+symbol_map U+2070-U+209F   JuliaMono
+symbol_map U+1D400-U+1D7FF JuliaMono
 
 # key mappings
-include                         keymaps.conf
+include keymaps.conf
 
 # cursor
-cursor_shape                    beam
-cursor_shape_unfocused          hollow
-cursor_blink_interval           0
-cursor_trail                    3
+cursor_shape           beam
+cursor_shape_unfocused hollow
+cursor_blink_interval  0
+cursor_trail           3
 
 # scrollback
 scrollback_indicator_opacity    0.3
@@ -29,50 +39,50 @@ scrollback_pager                bat
 scrollback_pager_history_size   8
 
 # colorscheme
-include                         kanagawa.conf
-background_opacity              1
-transparent_background_colors   #1a1a22 #16161d #2a2a37 #363646
+include                       kanagawa.conf
+background_opacity            1
+transparent_background_colors #1a1a22 #16161d #2a2a37 #363646
 
 # tab bar
-tab_bar_edge                    bottom
-tab_bar_align                   left
-tab_bar_style                   custom
-tab_activity_symbol             none
-bell_on_tab                     no
-tab_separator                   ""
-tab_bar_margin_width            0.0
-tab_bar_margin_height           0.0 0.0
-tab_title_template              "{f'{title[:30]}…' if title.rindex(title[-1]) + 1 > 30 else (title.center(6) if (title.rindex(title[-1]) + 1) % 2 == 0 else title.center(5))}"
-active_tab_font_style           bold
+tab_bar_edge          bottom
+tab_bar_align         left
+tab_bar_style         custom
+tab_activity_symbol   none
+bell_on_tab           no
+tab_separator         ""
+tab_bar_margin_width  0.0
+tab_bar_margin_height 0.0 0.0
+tab_title_template    "{f'{title[:30]}…' if title.rindex(title[-1]) + 1 > 30 else (title.center(6) if (title.rindex(title[-1]) + 1) % 2 == 0 else title.center(5))}"
+active_tab_font_style bold
 
 # mouse
-mouse_hide_wait                 1.0
-pointer_shape_when_dragging     hand
+mouse_hide_wait             1.0
+pointer_shape_when_dragging hand
 
 # urls
-url_style                       straight
-open_url_with                   $BROWSER
-underline_hyperlinks            hover
+url_style            straight
+open_url_with        $BROWSER
+underline_hyperlinks hover
 
 # behavior when pasting text
-paste_actions                   confirm,confirm-if-large
+paste_actions confirm,confirm-if-large
 
 # windows
-active_border_color             none
+active_border_color none
 
 # focus the pane under the mouse cursor when it moves
-focus_follows_mouse             yes
+focus_follows_mouse yes
 
 # remote control
-allow_remote_control            yes
-listen_on                       unix:/tmp/mykitty
+allow_remote_control yes
+listen_on            unix:/tmp/mykitty
 
 # disable bell
-enable_audio_bell               no
+enable_audio_bell no
 
 # padding
-window_padding_width            0
-placement_strategy              bottom
+window_padding_width 0
+placement_strategy   bottom
 
 # choose the display server (x11/wayland/auto)
-linux_display_server            x11
+linux_display_server x11
