feat(kitty): use JuliaMono for math unicode characters

--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -13,15 +13,7 @@ undercurl_style thin-dense
 
 symbol_map U+276F,U+276E   FiraCode Nerd Font
 # math glyphs
-symbol_map U+2100-U+214F   JuliaMono
-symbol_map U+2190-U+21FF   JuliaMono
-symbol_map U+2200-U+22FF   JuliaMono
-symbol_map U+2300-U+23FF   JuliaMono
-symbol_map U+25A0-U+25FF   JuliaMono
-symbol_map U+2A00-U+2AFF   JuliaMono
-symbol_map U+02B0-U+02FF   JuliaMono
-symbol_map U+2070-U+209F   JuliaMono
-symbol_map U+1D400-U+1D7FF JuliaMono
+include symbol_map.conf
 
 # key mappings
 include keymaps.conf
